--- a/Conectados2/ClientApp/app/components/home/home.component.html
+++ b/Conectados2/ClientApp/app/components/home/home.component.html
@@ -1,16 +1,48 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-    <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-    <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-    <li><a href='https://webpack.github.io/'>Webpack</a> for building and bundling client-side resources</li>
-    <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-    <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-    <li><strong>Server-side prerendering</strong>. For faster initial loading and improved SEO, your Angular app is prerendered on the server. The resulting HTML is then transferred to the browser where a client-side copy of the app takes over.</li>
-    <li><strong>Webpack dev middleware</strong>. In development mode, there's no need to run the <code>webpack</code> build tool. Your client-side resources are dynamically built on demand. Updates are available as soon as you modify any file.</li>
-    <li><strong>Hot module replacement</strong>. In development mode, you don't even need to reload the page after making most changes. Within seconds of saving changes to files, your Angular app will be rebuilt and a new instance injected into the page.</li>
-    <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and the <code>webpack</code> build tool produces minified static CSS and JavaScript files.</li>
-</ul>
+<div>
+  <mat-tab-group (selectedTabChange)="cambio($event)" class="demo-tab-group">
+    <mat-tab  label="Monitoreo">
+      <div class="home-map">
+        <agm-map #mapMonitoreo [zoom]="13" [latitude]="lat" [longitude]="lng">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        </agm-map>
+      </div>
+    </mat-tab>
+    <mat-tab label="Unidades">
+      <div class="home-map">
+        <agm-map  #mapUnidades [zoom]="13" [latitude]="lat" [longitude]="lng">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        </agm-map>
+      </div>
+    </mat-tab>
+    <mat-tab label="Incidentes">
+      <div>
+        Incidentes
+      </div>
+    </mat-tab>
+    <mat-tab label="Estadisticas">
+      <div class="demo-tab-content">
+        holi xd
+      </div>
+    </mat-tab>
+
+
+  </mat-tab-group>
+  <div class="leyenda-mapa">
+    <div style="position:relative;">
+
+      <button mat-raised-button><img src="/assets/img/waze.png" alt="waze icon">Waze</button>
+      <button mat-raised-button><img src="/assets/img/markergreen.png" alt="marker green">Alerta Muni</button>
+      <button mat-raised-button><img src="/assets/img/basepoli.png" alt="marker green">Radio Policia</button>
+      <button mat-raised-button><img src="/assets/img/transito.png" alt="marker green">Radio Transito</button>
+      <button mat-raised-button><img src="/assets/img/serenazgo.png" alt="marker green">Radio Serenazgo</button>
+      <button mat-raised-button><img src="/assets/img/moto.png" alt="marker green">Motocicleta</button>
+      <button mat-raised-button><img src="/assets/img/camioneta.png" alt="marker green">Camioneta</button>
+      <button mat-raised-button><img src="/assets/img/ambulancia.png" alt="marker green">Ambulancia</button>
+
+      <div class="btn-nuevo-caso">
+        <button (click)="openDialog()" mat-raised-button color="warn">Nuevo caso</button>
+      </div>
+    </div>
+  </div>
+
+</div>
