--- a/Conectados2/ClientApp/app/components/home/home.component.html
+++ b/Conectados2/ClientApp/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div>
+  <app-ultialerta></app-ultialerta>
   <mat-tab-group (selectedTabChange)="cambio($event)" class="demo-tab-group">
     <mat-tab  label="Monitoreo">
       <div class="home-map">
@@ -44,5 +45,5 @@
       </div>
     </div>
   </div>
-
+  <app-chat></app-chat>
 </div>
