--- a/Conectados2/ClientApp/app/components/login/login.component.html
+++ b/Conectados2/ClientApp/app/components/login/login.component.html
@@ -29,7 +29,7 @@
                         </mat-form-field>
                         <div>
                             <div>
-                                <mat-checkbox>Recuerdame!</mat-checkbox>
+                                <mat-checkbox>Recuerdame (Coco :c)!</mat-checkbox>
                                 <button mat-raised-button color="primary" type="submit" class="right">Iniciar sesión</button>
                             </div>
 
