muchas cosas wuuuuuuu

--- a/Conectados2/ClientApp/app/admin/municipalidad/municipalidad.component.html
+++ b/Conectados2/ClientApp/app/admin/municipalidad/municipalidad.component.html
@@ -1,1 +1,8 @@
-muni works!!
+<div class="full-width flex">
+    <div class="mitad-section">
+        <app-municipalidad-buscador (seleccionaFila) ="salida($event)"></app-municipalidad-buscador>
+    </div>
+    <div class="mitad-section">
+        <app-municipalidad-formulario></app-municipalidad-formulario>
+    </div>
+</div>
