--- a/Conectados2/ClientApp/app/components/chat/chat.component.html
+++ b/Conectados2/ClientApp/app/components/chat/chat.component.html
@@ -16,24 +16,34 @@
                 <div class="col-8" style="padding-left:0px;padding-right:0px;">
                     <div class=row>
                         <div class="col-12" style="height: 240px;">
-                            <mat-tab-group>
-                                <mat-tab *ngFor="let tab of chats" [label]="tab.usuario">
-                                    <div class="chatboxmensajes" style="height: 190px;">
-                                        <div *ngFor="let msgs of tab.conversacion">
-                                            <div class="chatboxmessage">
-                                                <span class="chatboxmessagefrom">{{msgs.user}}:&nbsp;&nbsp;</span>
-                                                <span class="chatboxmessagecontent">{{msgs.text}}</span>
+                            <div *ngIf="chats != '' ">
+                                <mat-tab-group>
+                                    <mat-tab *ngFor="let tab of chats" [label]="tab.descripcion">
+                                        <div class="chatboxmensajes" style="height: 190px;">
+                                            <div *ngIf="tab.conversaciones != ''">
+                                                <div *ngFor="let msgs of tab.conversaciones">
+                                                    <div class="chatboxmessage">
+                                                        <span class="chatboxmessagefrom">{{msgs.idUsuario}}:&nbsp;&nbsp;</span>
+                                                        <span class="chatboxmessagecontent">{{msgs.texto}}</span>
+                                                    </div>
+                                                    <div class="chatboxmessage">
+                                                        <span class="chatboxinfo">{{msgs.hora}}</span>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="chatboxmessage">
-                                                <span class="chatboxinfo">{{msgs.hora}}</span>
+                                            <div *ngIf="tab.conversaciones == ''" style="padding-top:7%;">
+                                                <div class="alert alert-warning">Aun no a iniciado una conversacion</div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="chatboxinput">
-                                        <textarea class="chatboxtextarea" (keypress)="onEnter($event, tab, text)" name="text" [(ngModel)]="text" placeholder="Escribir mensaje aquí.." style="resize: none;" ngModel></textarea>
-                                    </div>
-                                </mat-tab>
-                            </mat-tab-group>
+                                        <div class="chatboxinput">
+                                            <textarea class="chatboxtextarea" (keypress)="onEnter($event, tab, text)" name="text" [(ngModel)]="text" placeholder="Escribir mensaje aquí.." style="resize: none;" ngModel></textarea>
+                                        </div>
+                                    </mat-tab>
+                                </mat-tab-group>
+                            </div>
+                            <div *ngIf=" chats == ''" style="padding-top:7%;">
+                                <div class="alert alert-warning">Aun no abierto una conversacion/mensaje</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -43,8 +53,10 @@
                             <div class="chatboxmensajes" style="height: 250px;">
                                 <mat-list style="padding-top: 0px;">
                                     <mat-list-item *ngFor="let msg of mensajes" style="height: 50px; cursor: pointer;" (click)="elegirMensaje(msg)">
-                                        <h4 mat-line>{{msg.usuario}}</h4>
+                                        <h4 mat-line>{{msg.descripcion}}</h4>
+                                        <!--
                                         <p mat-line>{{msg.ultimo_mensaje.text | slice:0:10 }}.. : {{msg.ultimo_mensaje.hora}}</p>
+                                        -->
                                     </mat-list-item>
                                 </mat-list>
                             </div>
