--- a/Conectados2/ClientApp/app/components/ultialerta/ultialerta.component.css
+++ b/Conectados2/ClientApp/app/components/ultialerta/ultialerta.component.css
@@ -27,10 +27,11 @@ li {
     position: fixed;
     position: expression("absolute");
     display: none;
-    z-index: 1;
+    z-index: 30;
     top: 49px;
     right: 0px;
     display: block;
+    border: 1px #007bff;
 }
 
 .chatboxhead {
@@ -61,9 +62,9 @@ li {
     color: #333333;
     height: 320px;
     width: auto;
-    border-left: 1px solid #cccccc;
-    border-right: 1px solid #cccccc;
-    border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #007bff;
+    border-right: 1px solid #007bff;
+    border-bottom: 1px solid #007bff;
     background-color: #ffffff;
     line-height: 1.3em;
 }
@@ -109,19 +110,18 @@ li {
     font-weight: bold;
 }
 
-.chatboxmessagecontent {
-}
+.chatboxmessagecontent {}
 
 .chatboxoptions {
     float: right;
 }
 
-    .chatboxoptions a {
-        text-decoration: none;
-        color: white;
-        font-weight: bold;
-        font-family: Verdana, Arial, "Bitstream Vera Sans", sans-serif;
-    }
+.chatboxoptions a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-family: Verdana, Arial, "Bitstream Vera Sans", sans-serif;
+}
 
 .chatboxtitle {
     float: left;
@@ -215,11 +215,11 @@ body {
     margin-left: 0
 }
 
-    .no-gutters > .col,
-    .no-gutters > [class*=col-] {
-        padding-right: 0;
-        padding-left: 0
-    }
+.no-gutters>.col,
+.no-gutters>[class*=col-] {
+    padding-right: 0;
+    padding-left: 0
+}
 
 .col,
 .col-1,
@@ -408,7 +408,6 @@ body {
         flex-grow: 1;
         max-width: 100%
     }
-
     .col-sm-auto {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
@@ -416,84 +415,72 @@ body {
         width: auto;
         max-width: none
     }
-
     .col-sm-1 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 8.333333%;
         flex: 0 0 8.333333%;
         max-width: 8.333333%
     }
-
     .col-sm-2 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 16.666667%;
         flex: 0 0 16.666667%;
         max-width: 16.666667%
     }
-
     .col-sm-3 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
         flex: 0 0 25%;
         max-width: 25%
     }
-
     .col-sm-4 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 33.333333%;
         flex: 0 0 33.333333%;
         max-width: 33.333333%
     }
-
     .col-sm-5 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 41.666667%;
         flex: 0 0 41.666667%;
         max-width: 41.666667%
     }
-
     .col-sm-6 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
         flex: 0 0 50%;
         max-width: 50%
     }
-
     .col-sm-7 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 58.333333%;
         flex: 0 0 58.333333%;
         max-width: 58.333333%
     }
-
     .col-sm-8 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 66.666667%;
         flex: 0 0 66.666667%;
         max-width: 66.666667%
     }
-
     .col-sm-9 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 75%;
         flex: 0 0 75%;
         max-width: 75%
     }
-
     .col-sm-10 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 83.333333%;
         flex: 0 0 83.333333%;
         max-width: 83.333333%
     }
-
     .col-sm-11 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 91.666667%;
         flex: 0 0 91.666667%;
         max-width: 91.666667%
     }
-
     .col-sm-12 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
