cambios con errores

--- a/Conectados2/ClientApp/app/usuariomuni/chat/chat.component.css
+++ b/Conectados2/ClientApp/app/usuariomuni/chat/chat.component.css
@@ -6,6 +6,15 @@ li {
     cursor: pointer;
 }
 
+.example-card {
+    max-width: 400px;
+}
+
+.example-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+}
+
 .styleContact {
     padding: 1px;
     height: 260px;
