--- a/Conectados2/ClientApp/app/usuariomuni/chat/chat.component.html
+++ b/Conectados2/ClientApp/app/usuariomuni/chat/chat.component.html
@@ -1,6 +1,4 @@
 <!--Chat-->
-
-
 <div id="chatbox_johndoe" class="chatbox" [ngStyle]="{'width.px': tam_chat, 'backgroundColor':'white'}">
     <div class="chatboxhead">
         <div class="chatboxtitle">Chat</div>
@@ -49,16 +47,22 @@
                 </div>
                 <div class="col-4" style="padding-left:0px;padding-right: 0px;">
                     <mat-tab-group>
-                        <mat-tab label="Mensajes">
+                        <mat-tab label="Contactos">
                             <div class="chatboxmensajes" style="height: 250px;">
-                                <mat-list style="padding-top: 0px;">
-                                    <mat-list-item *ngFor="let msg of mensajes" style="height: 50px; cursor: pointer;" (click)="elegirMensaje(msg)">
-                                        <h4 mat-line>{{msg.descripcion}}</h4>
-                                        <!--
-                                        <p mat-line>{{msg.ultimo_mensaje.text | slice:0:10 }}.. : {{msg.ultimo_mensaje.hora}}</p>
-                                        -->
-                                    </mat-list-item>
-                                </mat-list>
+                                <div *ngIf=" contactos != ''">
+                                    <mat-list style="padding-top: 0px;">
+                                        <mat-list-item *ngFor="let cont of contactos" style="height: 50px; cursor: pointer;" (click)="elegirContacto(cont)">
+                                            <h5 mat-line>{{cont.username}}</h5>
+                                            <i style="color:forestgreen;">Online</i><i style="color:brown;">Offline</i>
+                                            <!--
+                                                    <p mat-line>{{msg.ultimo_mensaje.text | slice:0:10 }}.. : {{msg.ultimo_mensaje.hora}}</p>
+                                                    -->
+                                        </mat-list-item>
+                                    </mat-list>
+                                </div>
+                                <div *ngIf=" contactos == ''" style="padding-top:7%; padding-right: 5px;">
+                                    <div class="alert alert-warning">No tiene ningún Contacto</div>
+                                </div>
                             </div>
                         </mat-tab>
                     </mat-tab-group>
