--- a/Conectados2/ClientApp/app/components/login/login.component.html
+++ b/Conectados2/ClientApp/app/components/login/login.component.html
@@ -29,7 +29,7 @@
                         </mat-form-field>
                         <div>
                             <div>
-                                <mat-checkbox>Recuerdame (Coco :c)!</mat-checkbox>
+                                <mat-checkbox>Recuerdame</mat-checkbox>
                                 <button mat-raised-button color="primary" type="submit" class="right">Iniciar sesión</button>
                             </div>
 
@@ -37,7 +37,7 @@
                             <br>
                         </div>
                         <mat-divider></mat-divider>
-                        <div style="text-align: center">
+                        <div *ngIf="false" style="text-align: center">
 
                             <button mat-raised-button color="primary" href="#">Crear una cuenta</button>
                         </div>
