--- a/Conectados2/ClientApp/app/admin/sector/sector-formulario/sector-formulario.component.html
+++ b/Conectados2/ClientApp/app/admin/sector/sector-formulario/sector-formulario.component.html
@@ -1,44 +1,63 @@
 <div>
     <div>
-      <div>
-            <mat-form-field class="full-width">
-              <input matInput  placeholder="Nombre de entidad..." [(ngModel)]="sectorInicial.nombre">
-            </mat-form-field>
-          
-            <mat-form-field class="full-width">
-                <mat-select  placeholder="Tipo de entidad" [(ngModel)]="sectorInicial.tipoSector.idTipoSector">
-                        <mat-option  *ngFor='let tipo of tiposSector'  [value]="tipo.idTipoSector">{{tipo.nombre}}</mat-option>
-                </mat-select>
-              </mat-form-field>
-            <div class="sector-mapa">
-                <agm-map  #mapNuevoCaso [zoom]="13" [latitude]="lat" [longitude]="lng" >
-                    <agm-polygon [paths]="paths" [editable]="true">
-                        </agm-polygon>
-                  </agm-map>
-            </div>
-            <div id="map"></div>
-      </div>
+        <div>
+            <mat-tab-group (selectedTabChange)="cambio($event)" class="demo-tab-group">
+                <mat-tab  label="Jurisdiccion">
+                        <div>
+                            <mat-form-field class="full-width">
+                                <input matInput [disabled] = "!controls"  placeholder="Nombre de entidad..." [(ngModel)]="sectorInicial.nombre">
+                            </mat-form-field>
+                            
+                            <!--<mat-form-field class="full-width">
+                                <mat-select [disabled] = "!controls"  placeholder="Tipo de entidad" [(ngModel)]="sectorInicial.idTipoSector">
+                                        <mat-option  *ngFor='let tipo of tiposSector'  [value]="tipo.idTipoSector">{{tipo.nombre}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>-->
+                            <div class="sector-mapa">
+                                <agm-map  #mapNuevoCaso [zoom]="13" [latitude]="lat" [longitude]="lng" >
+                                    <agm-polygon [paths]="paths" [editable]="true">
+                                        </agm-polygon>
+                                    </agm-map>
+                            </div>
+                            
+                            <div style="text-align: right">
+                                <button mat-raised-button color="primary" [disabled] = "!controls" (click)= "reiniciarMapa()">
+                                    Reiniciar
+                                </button>
+                            </div>
+                            <div id="map"></div>
+                        </div>
+                </mat-tab>
+                <mat-tab label="Unidades">
+                    
+                </mat-tab>
+                <mat-tab label="Incidentes">
+                    
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+      
       <div class="text-center">
-          <button mat-raised-button color="primary">
+            <button [disabled]="!buttons.nuevo" mat-raised-button color="primary" (click)="nuevo()">
               <mat-icon aria-label="Nueva muni">&#xE873;</mat-icon> Nuevo
             </button>
-            <button mat-raised-button color="primary">
+            <button [disabled]="!buttons.guardar" mat-raised-button color="primary" (click)="guardar()">
                 <mat-icon aria-label="Nueva muni">&#xE161;</mat-icon> Guardar
             </button>
-            <button mat-raised-button color="primary">
+            <button [disabled]="!buttons.modificar" mat-raised-button color="primary">
                 <mat-icon aria-label="Nueva muni">&#xE254;</mat-icon> Modificar
             </button>
-            <button mat-raised-button color="primary">
+            <button [disabled]="!buttons.eliminar" mat-raised-button color="primary">
                 <mat-icon aria-label="Nueva muni">&#xE92B;</mat-icon> Eliminar
             </button>
             
-            <button mat-raised-button color="primary">
+            <button [disabled]="!buttons.cancelar" mat-raised-button color="primary">
                 <mat-icon aria-label="Nueva muni">&#xE5C9;</mat-icon> Cancelar
             </button>
-            <button mat-raised-button color="primary">
+            <button [disabled]="!buttons.ver" mat-raised-button color="primary">
                 <mat-icon aria-label="Nueva muni">&#xE417;</mat-icon> Visualizar
             </button>
-            <button mat-raised-button color="primary">
+            <button [disabled]="!buttons.imprimir" mat-raised-button color="primary">
                 <mat-icon aria-label="Nueva muni">&#xE8AD;</mat-icon> Imprimir
             </button>
       </div>
