--- a/Conectados2/ClientApp/app/admin/sector/sector-formulario/sector-formulario.component.html
+++ b/Conectados2/ClientApp/app/admin/sector/sector-formulario/sector-formulario.component.html
@@ -21,17 +21,17 @@
                             </div>
                             
                             <div style="text-align: right">
-                                <button mat-raised-button color="primary" [disabled] = "!controls" (click)= "reiniciarMapa()">
+                                <button mat-raised-button color="primary" [disabled] = "!controls" (click)= "reiniciarDibujo()">
                                     Reiniciar
                                 </button>
                             </div>
                             <div id="map"></div>
                         </div>
                 </mat-tab>
-                <mat-tab label="Unidades">
+                <mat-tab label="Sectores">
                     
                 </mat-tab>
-                <mat-tab label="Incidentes">
+                <mat-tab label="SubSectores">
                     
                 </mat-tab>
             </mat-tab-group>
@@ -44,14 +44,14 @@
             <button [disabled]="!buttons.guardar" mat-raised-button color="primary" (click)="guardar()">
                 <mat-icon aria-label="Nueva muni">&#xE161;</mat-icon> Guardar
             </button>
-            <button [disabled]="!buttons.modificar" mat-raised-button color="primary">
+            <button [disabled]="!buttons.modificar" mat-raised-button color="primary" (click)="modificar()">
                 <mat-icon aria-label="Nueva muni">&#xE254;</mat-icon> Modificar
             </button>
             <button [disabled]="!buttons.eliminar" mat-raised-button color="primary">
                 <mat-icon aria-label="Nueva muni">&#xE92B;</mat-icon> Eliminar
             </button>
             
-            <button [disabled]="!buttons.cancelar" mat-raised-button color="primary">
+            <button [disabled]="!buttons.cancelar" mat-raised-button color="primary" (click)="cancelar()">
                 <mat-icon aria-label="Nueva muni">&#xE5C9;</mat-icon> Cancelar
             </button>
             <button [disabled]="!buttons.ver" mat-raised-button color="primary">
