cosas que no se si se modificaron pero igual lo subo

--- a/Conectados2/ClientApp/app/usuariomuni/chat/chat.component.html
+++ b/Conectados2/ClientApp/app/usuariomuni/chat/chat.component.html
@@ -21,7 +21,7 @@
                                             <div *ngIf="tab.mensaje != ''">
                                                 <div *ngFor="let msgs of tab.mensaje">
                                                     <div class="chatboxmessage">
-                                                        <span class="chatboxmessagefrom">{{msgs.idUsuario}}:&nbsp;&nbsp;</span>
+                                                        <span class="chatboxmessagefrom">{{tab.username}}:&nbsp;&nbsp;</span>
                                                         <span class="chatboxmessagecontent">{{msgs.texto}}</span>
                                                     </div>
                                                     <div class="chatboxmessage">
