--- a/Conectados2/ClientApp/app/admin/admin.component.html
+++ b/Conectados2/ClientApp/app/admin/admin.component.html
@@ -12,7 +12,8 @@
     </mat-menu>
 
     <mat-menu #lugares="matMenu">
-        <button (click)="irRuta('/admin/sector')" mat-menu-item>Sectores</button>
+        <button (click)="irRuta('/admin/sector')" mat-menu-item>Jurisdiccion</button>
+        <button (click)="irRuta('/admin/seccion')" mat-menu-item>Seccion</button>
     </mat-menu>
 
     
