--- a/Conectados2/Views/Shared/_Layout.cshtml
+++ b/Conectados2/Views/Shared/_Layout.cshtml
@@ -8,10 +8,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="~/assets/css/estilos.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    
 </head>
 <body>
     @RenderBody()
 
     @RenderSection("scripts", required: false)
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 </html>
