--- a/Conectados2/wwwroot/assets/css/estilos.css
+++ b/Conectados2/wwwroot/assets/css/estilos.css
@@ -60,3 +60,39 @@ mat-header-row .mat-header-cell{
 .mat-raised-button{
     margin: 5px !important;
 }
+
+.gmaps-label {
+    position: absolute;
+    border: 0;
+    white-space: nowrap;
+    font-family: Arial, sans-serif;
+    color: white;
+    font-size: 17px;
+    text-shadow:
+            -1px -1px 0.5px rgba(0,0,0,0.5),
+            1px -1px 0.5px rgba(0,0,0,0.5),
+            -1px 1px 0.5px rgba(0,0,0,0.5),
+            1px 1px 0.5px rgba(0,0,0,0.5);
+}
+
+.gmaps-label.small {
+    font-size: 14px;
+}
+
+.gmaps-label.big {
+    font-size: 22px;
+    color: yellow;
+}
+
+.gmaps-label.huge {
+    color: white;
+    font-size: 30px;
+    text-shadow:
+            -1.5px -1.5px 0.5px rgba(0,0,0,0.5),
+            1.5px -1.5px 0.5px rgba(0,0,0,0.5),
+            -1.5px 1.5px 0.5px rgba(0,0,0,0.5),
+            1.5px 1.5px 0.5px rgba(0,0,0,0.5);
+}
+.inline{
+    padding: 15px 0;
+}
