--- a/Conectados2/ClientApp/app/admin/sector/sector-buscador-modal/sector-buscador-modal.component.html
+++ b/Conectados2/ClientApp/app/admin/sector/sector-buscador-modal/sector-buscador-modal.component.html
@@ -1,5 +1,5 @@
-
-<div>
+<h1 mat-dialog-title>Buscar Jurisdicción</h1>
+<div mat-dialog-content>
     <app-sector-buscador (seleccionaFila) ="cerrarModal($event)">
 
     </app-sector-buscador>
