--- a/Conectados2/ClientApp/app/admin/municipalidad/municipalidad-formulario/municipalidad-formulario.component.html
+++ b/Conectados2/ClientApp/app/admin/municipalidad/municipalidad-formulario/municipalidad-formulario.component.html
@@ -2,56 +2,49 @@
     <div>
       <div>
             <mat-form-field class="full-width">
-              <input matInput  placeholder="Nombre de entidad...">
+              <input matInput [disabled] = "!controls" placeholder="Nombre de entidad..." [(ngModel)]="municipalidad.nombre">
             </mat-form-field>
           
             <mat-form-field class="full-width">
-                <mat-select  placeholder="Tipo de entidad">
-                        <mat-option  *ngFor='let tipo of tiposMuni'  value="tipo.idTipoMuni">{{tipo.nombre}}</mat-option>
+                <mat-select  [disabled] = "!controls" placeholder="Tipo de entidad" [(ngModel)]="municipalidad.idTipoComiMuni">
+                        <mat-option  *ngFor='let tipo of tiposMuni'  [value]="tipo.idTipoMuni">{{tipo.nombre}}</mat-option>
                 </mat-select>
             </mat-form-field>
           <div class="inline">
               <div class="input-search-muni full-width">
                   <mat-form-field class="full-width">
-                      <input matInput [readonly]="true"  placeholder="Buscar jurisdiccion..." [(ngModel)]="jurisdiccion.nombre">
+                      <input matInput [disabled] = "!controls"  [readonly]="true"  placeholder="Buscar jurisdiccion..." [(ngModel)]="jurisdiccion.nombre">
                   </mat-form-field>
               </div>
               <div>
-                  <button mat-fab color="primary" (click)="abrirModalBuscarJurisdiccion()">
+                  <button [disabled] = "!controls"  mat-mini-fab color="primary" (click)="abrirModalBuscarJurisdiccion()">
                       <mat-icon aria-label="Search icon">&#xE8B6;</mat-icon>
                   </button>
               </div>
               <div>
-                  <button mat-fab color="primary" (click)="abrirModalFormularioJurisdicion()">
+                  <button [disabled] = "!controls"  mat-mini-fab color="primary" (click)="abrirModalFormularioJurisdicion()">
                       <mat-icon aria-label="Search icon">&#xE145;</mat-icon>
                   </button>
-              </div>
+                </div>
+          </div>
+          <div>
+            <div class="muni">
+                <agm-map [zoom]="zoom"
+                         #mapaMuni
+                         (mapReady)="mapReady($event)" 
+                         (idle)="idleFunction()"
+                         [mapDraggable] = "editarUbicacion"
+                         [latitude]="municipalidad.ubicacion.latitud" 
+                         [longitude]="municipalidad.ubicacion.longitud" >
 
+                         <button id="editPos" [disabled] = "!controls"  mat-raised-button color="primary" (click)="editarUbicacion = ! editarUbicacion">
+                            Editar
+                        </button>
+                </agm-map>
+                <div class="markerCenter"></div>
+              </div>
           </div>
       </div>
-      <div class="text-center">
-          <button mat-raised-button color="primary">
-              <mat-icon aria-label="Nueva muni">&#xE873;</mat-icon> Nuevo
-            </button>
-            <button mat-raised-button color="primary">
-                <mat-icon aria-label="Nueva muni">&#xE161;</mat-icon> Guardar
-            </button>
-            <button mat-raised-button color="primary">
-                <mat-icon aria-label="Nueva muni">&#xE254;</mat-icon> Modificar
-            </button>
-            <button mat-raised-button color="primary">
-                <mat-icon aria-label="Nueva muni">&#xE92B;</mat-icon> Eliminar
-            </button>
-            
-            <button mat-raised-button color="primary">
-                <mat-icon aria-label="Nueva muni">&#xE5C9;</mat-icon> Cancelar
-            </button>
-            <button mat-raised-button color="primary">
-                <mat-icon aria-label="Nueva muni">&#xE417;</mat-icon> Visualizar
-            </button>
-            <button mat-raised-button color="primary">
-                <mat-icon aria-label="Nueva muni">&#xE8AD;</mat-icon> Imprimir
-            </button>
-      </div>
+      
     </div>
   </div>
