--- a/Conectados2/ClientApp/app/admin/municipalidad/municipalidad.component.html
+++ b/Conectados2/ClientApp/app/admin/municipalidad/municipalidad.component.html
@@ -4,5 +4,55 @@
     </div>
     <div class="mitad-section">
         <app-municipalidad-formulario></app-municipalidad-formulario>
+        <div>
+            <div class="full-width text-center">
+                  <button [disabled]="!buttons.nuevo" (click)="nuevo()" mat-raised-button color="primary">
+                    <mat-icon aria-label="Nueva muni">&#xE873;</mat-icon> Nuevo
+                  </button>
+                  <button [disabled]="!buttons.guardar" (click)="guardar()" mat-raised-button color="primary">
+                      <mat-icon aria-label="Nueva muni">&#xE161;</mat-icon> Guardar
+                  </button>
+                  <button [disabled]="!buttons.modificar" (click)="modificar()" mat-raised-button color="primary">
+                      <mat-icon aria-label="Nueva muni">&#xE254;</mat-icon> Modificar
+                  </button>
+                  <button [disabled]="!buttons.eliminar" (click)="eliminar()" mat-raised-button color="primary">
+                      <mat-icon aria-label="Nueva muni">&#xE92B;</mat-icon> Eliminar
+                  </button>
+                  
+                  <button [disabled]="!buttons.cancelar" (click)="cancelar()" mat-raised-button color="primary">
+                      <mat-icon aria-label="Nueva muni">&#xE5C9;</mat-icon> Cancelar
+                  </button>
+                  <button [disabled]="!buttons.ver" mat-raised-button color="primary">
+                      <mat-icon aria-label="Nueva muni">&#xE417;</mat-icon> Visualizar
+                  </button>
+                  <button [disabled]="!buttons.imprimir" mat-raised-button color="primary">
+                      <mat-icon aria-label="Nueva muni">&#xE8AD;</mat-icon> Imprimir
+                  </button>
+            </div>
+        </div>
+    </div>
+    <div class="float-buttons">
+        <button [disabled]="!buttons.nuevo" (click)="nuevo()" mat-mini-fab color="primary">
+            <mat-icon aria-label="Nueva muni">&#xE873;</mat-icon>
+          </button>
+          <button [disabled]="!buttons.guardar" (click)="guardar()" mat-mini-fab color="primary">
+              <mat-icon aria-label="Nueva muni">&#xE161;</mat-icon>
+          </button>
+          <button [disabled]="!buttons.modificar" (click)="modificar()" mat-mini-fab color="primary">
+              <mat-icon aria-label="Nueva muni">&#xE254;</mat-icon>
+          </button>
+          <button [disabled]="!buttons.eliminar" (click)="eliminar()" mat-mini-fab color="primary">
+              <mat-icon aria-label="Nueva muni">&#xE92B;</mat-icon>
+          </button>
+          
+          <button [disabled]="!buttons.cancelar" (click)="cancelar()" mat-mini-fab color="primary">
+              <mat-icon aria-label="Nueva muni">&#xE5C9;</mat-icon>
+          </button>
+          <button [disabled]="!buttons.ver" mat-mini-fab color="primary">
+              <mat-icon aria-label="Nueva muni">&#xE417;</mat-icon>
+          </button>
+          <button [disabled]="!buttons.imprimir" mat-mini-fab color="primary">
+              <mat-icon aria-label="Nueva muni">&#xE8AD;</mat-icon>
+          </button>
     </div>
 </div>
