--- a/Conectados2/ClientApp/app/admin/municipalidad/municipalidad-buscador/municipalidad-buscador.component.html
+++ b/Conectados2/ClientApp/app/admin/municipalidad/municipalidad-buscador/municipalidad-buscador.component.html
@@ -37,6 +37,6 @@
     <div class="text-center">
       <app-navegacion [totalPaginas]="paginacion.totalPaginas"
                       [paginaActual]="paginacion.paginaActual"
-       (consultar)="clistar($event)"></app-navegacion>
+       (consultar)="listar($event)"></app-navegacion>
   </div>
   </div>
