--- a/Conectados2/ClientApp/app/usuariomuni/home/home.component.html
+++ b/Conectados2/ClientApp/app/usuariomuni/home/home.component.html
@@ -3,9 +3,14 @@
   <mat-tab-group (selectedTabChange)="cambio($event)" class="demo-tab-group">
     <mat-tab  label="Monitoreo">
       <div class="home-map">
+          <app-mapa [lat]="municipalidad.ubicacion.latitud" 
+          [lng]="municipalidad.ubicacion.longitud" 
+          [controls] = "controlsMap"
+          (idle)="idleFunction()" #mapa></app-mapa>
+        <!--
         <agm-map #mapMonitoreo [zoom]="13" [latitude]="lat" [longitude]="lng">
           <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-        </agm-map>
+        </agm-map>-->
       </div>
     </mat-tab>
     <mat-tab label="Unidades">
