--- a/Conectados2/ClientApp/app/usuariomuni/nuevocaso/nuevocaso.component.html
+++ b/Conectados2/ClientApp/app/usuariomuni/nuevocaso/nuevocaso.component.html
@@ -44,22 +44,22 @@
                     [zoom]="16" 
                     [latitude]="ubicacion.latitud" 
                     [longitude]="ubicacion.longitud" (idle)="idleFunction()">
-            <!--<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>-->
+          
           </agm-map>
           <div class="markerCenter"></div>
         </div>
         <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
+          <button mat-button matStepperPrevious>Atrás</button>
+          <button mat-button matStepperNext>Siguiente</button>
         </div>
       </form>
     </mat-step>
     <mat-step>
-      <ng-template matStepLabel>Done</ng-template>
-      You are now done.
+      <ng-template matStepLabel>Finalizado</ng-template>
+      <button mat-button>Guardar</button>
       <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.reset()">Reset</button>
+        <button mat-button matStepperPrevious>Atrás</button>
+        <button mat-button (click)="stepper.reset()">Reiniciar</button>
       </div>
     </mat-step>
   </mat-vertical-stepper>
