--- a/Conectados2/ClientApp/app/usuariomuni/nuevocaso/nuevocaso.component.html
+++ b/Conectados2/ClientApp/app/usuariomuni/nuevocaso/nuevocaso.component.html
@@ -6,7 +6,7 @@
         <ng-template matStepLabel>General</ng-template>
         <mat-form-field class="full-width">
           <mat-select formControlName="tipoIncidente" placeholder="Tipo de incidente">
-            <mat-option  *ngFor='let tipo of tipoDenuncia'  value="tipo.idTipoDenuncia">{{tipo.nombre}}</mat-option>
+            <mat-option  *ngFor='let tipo of tipoDenuncia'  [value]="tipo.idTipoDenuncia">{{tipo.nombre}}</mat-option>
           </mat-select>
           <mat-error>Debe elegir un tipo de incidente</mat-error>
         </mat-form-field>
@@ -56,7 +56,7 @@
     </mat-step>
     <mat-step>
       <ng-template matStepLabel>Finalizado</ng-template>
-      <button mat-button>Guardar</button>
+      <button mat-button (click)="guardar()">Guardar</button>
       <div>
         <button mat-button matStepperPrevious>Atrás</button>
         <button mat-button (click)="stepper.reset()">Reiniciar</button>
