--- a/Conectados2/ClientApp/app/usuariomuni/home/home.component.html
+++ b/Conectados2/ClientApp/app/usuariomuni/home/home.component.html
@@ -1,49 +1,49 @@
 <div>
-  <app-ultialerta></app-ultialerta>
-  <mat-tab-group (selectedTabChange)="cambio($event)" class="demo-tab-group">
-    <mat-tab  label="Monitoreo">
-      <div class="home-map">
-        <agm-map #mapMonitoreo [zoom]="13" [latitude]="lat" [longitude]="lng">
-          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-        </agm-map>
-      </div>
-    </mat-tab>
-    <mat-tab label="Unidades">
-      <div class="home-map">
-        <agm-map  #mapUnidades [zoom]="13" [latitude]="lat" [longitude]="lng">
-          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-        </agm-map>
-      </div>
-    </mat-tab>
-    <mat-tab label="Incidentes">
-      <div>
-        Incidentes
-      </div>
-    </mat-tab>
-    <mat-tab label="Estadisticas">
-      <div class="demo-tab-content">
-        holi xd
-      </div>
-    </mat-tab>
+    <app-ultialerta></app-ultialerta>
+    <mat-tab-group (selectedTabChange)="cambio($event)" class="demo-tab-group">
+        <mat-tab label="Monitoreo">
+            <div class="home-map">
+                <agm-map #mapMonitoreo [zoom]="13" [latitude]="lat" [longitude]="lng">
+                    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+                </agm-map>
+            </div>
+        </mat-tab>
+        <mat-tab label="Unidades">
+            <div class="home-map">
+                <agm-map #mapUnidades [zoom]="13" [latitude]="lat" [longitude]="lng">
+                    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+                </agm-map>
+            </div>
+        </mat-tab>
+        <mat-tab label="Incidentes">
+            <div>
+                Incidentes
+            </div>
+        </mat-tab>
+        <mat-tab label="Estadisticas">
+            <div class="demo-tab-content">
+                <app-estadisticas></app-estadisticas>
+            </div>
+        </mat-tab>
 
 
-  </mat-tab-group>
-  <div class="leyenda-mapa">
-    <div style="position:relative;">
+    </mat-tab-group>
+    <div class="leyenda-mapa">
+        <div style="position:relative;">
 
-      <button mat-raised-button><img src="/assets/img/waze.png" alt="waze icon">Waze</button>
-      <button mat-raised-button><img src="/assets/img/markergreen.png" alt="marker green">Alerta Muni</button>
-      <button mat-raised-button><img src="/assets/img/basepoli.png" alt="marker green">Radio Policia</button>
-      <button mat-raised-button><img src="/assets/img/transito.png" alt="marker green">Radio Transito</button>
-      <button mat-raised-button><img src="/assets/img/serenazgo.png" alt="marker green">Radio Serenazgo</button>
-      <button mat-raised-button><img src="/assets/img/moto.png" alt="marker green">Motocicleta</button>
-      <button mat-raised-button><img src="/assets/img/camioneta.png" alt="marker green">Camioneta</button>
-      <button mat-raised-button><img src="/assets/img/ambulancia.png" alt="marker green">Ambulancia</button>
+            <button mat-raised-button><img src="/assets/img/waze.png" alt="waze icon">Waze</button>
+            <button mat-raised-button><img src="/assets/img/markergreen.png" alt="marker green">Alerta Muni</button>
+            <button mat-raised-button><img src="/assets/img/basepoli.png" alt="marker green">Radio Policia</button>
+            <button mat-raised-button><img src="/assets/img/transito.png" alt="marker green">Radio Transito</button>
+            <button mat-raised-button><img src="/assets/img/serenazgo.png" alt="marker green">Radio Serenazgo</button>
+            <button mat-raised-button><img src="/assets/img/moto.png" alt="marker green">Motocicleta</button>
+            <button mat-raised-button><img src="/assets/img/camioneta.png" alt="marker green">Camioneta</button>
+            <button mat-raised-button><img src="/assets/img/ambulancia.png" alt="marker green">Ambulancia</button>
 
-      <div class="btn-nuevo-caso">
-        <button (click)="openDialog()" mat-raised-button color="warn">Nuevo caso</button>
-      </div>
+            <div class="btn-nuevo-caso">
+                <button (click)="openDialog()" mat-raised-button color="warn">Nuevo caso</button>
+            </div>
+        </div>
     </div>
-  </div>
-  <app-chat></app-chat>
+    <app-chat></app-chat>
 </div>
