--- a/Conectados2/ClientApp/app/usuariomuni/estadisticas/estadisticas.component.html
+++ b/Conectados2/ClientApp/app/usuariomuni/estadisticas/estadisticas.component.html
@@ -1,15 +1,20 @@
 <div>
-    hola
-    <div>
-        <app-anillo></app-anillo>
-    </div>
-    <div>
-        <app-barras></app-barras>
-    </div>
-    <div>
-        <app-curvas></app-curvas>
-    </div>
-    <div>
-        <app-sectores></app-sectores>
+    <div class="container-fluid" style="padding-bottom: 10px;padding-top: 10px;">
+        <div class="row">
+            <div class="col-sm-6">
+                <app-anillo></app-anillo>
+            </div>
+            <div class="col-sm-6">
+                <app-barras></app-barras>
+            </div>
+        </div>
+        <div clas="row">
+            <div class="col-sm-6">
+                <app-curvas></app-curvas>
+            </div>
+            <div class="col-sm-6">
+                <app-sectores></app-sectores>
+            </div>
+        </div>
     </div>
 </div>
